[gd_scene load_steps=10 format=3 uid="uid://l5rnkr1rcvun"]

[ext_resource type="Script" uid="uid://b18mg5dobt73m" path="res://scripts/slide_board.gd" id="1_8cgnj"]
[ext_resource type="PackedScene" uid="uid://cboumc36hyhwu" path="res://scenes/slide_puzzle_piece.tscn" id="2_8cgnj"]
[ext_resource type="Texture2D" uid="uid://cw7o870y56cfm" path="res://textures/piece_1x2.png" id="3_pafdi"]
[ext_resource type="Texture2D" uid="uid://k3trfwwcsdtl" path="res://textures/piece_2x1.png" id="4_1k3xo"]
[ext_resource type="Texture2D" uid="uid://cb630wjkdwkfi" path="res://textures/key.png" id="4_f7le1"]
[ext_resource type="Texture2D" uid="uid://wly2kisemq5s" path="res://textures/piece_2x2.png" id="5_rdjhc"]
[ext_resource type="Script" uid="uid://dei5dyvwkle7g" path="res://scripts/slide_puzzle_arrows.gd" id="6_no8og"]
[ext_resource type="Texture2D" uid="uid://x4ww3iqcwdxg" path="res://textures/arrow.png" id="6_rdjhc"]
[ext_resource type="Script" uid="uid://bxt6vw0pqa7as" path="res://scripts/slide_puzzle_arrow.gd" id="7_dcd0g"]

[node name="Slide Puzzle" type="Node2D"]

[node name="Board" type="Control" parent="." node_paths=PackedStringArray("directional_arrows")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_8cgnj")
board_size = Vector2i(5, 5)
tile_size = 32
directional_arrows = NodePath("../Directional Arrows")

[node name="Slide Puzzle Piece2" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 96.0
offset_top = 96.0
offset_right = 160.0
offset_bottom = 128.0
texture = ExtResource("3_pafdi")
piece_type = 1

[node name="Slide Puzzle Piece3" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 160.0

[node name="Slide Puzzle Piece9" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0

[node name="Slide Puzzle Piece10" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 64.0
offset_right = 96.0
offset_bottom = 32.0

[node name="Slide Puzzle Piece11" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 96.0
offset_right = 128.0
offset_bottom = 32.0

[node name="Slide Puzzle Piece4" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 128.0
texture = ExtResource("4_f7le1")
piece_type = 4

[node name="Slide Puzzle Piece5" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 64.0
offset_bottom = 160.0

[node name="Slide Puzzle Piece6" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 160.0
texture = ExtResource("4_1k3xo")
piece_type = 2

[node name="Slide Puzzle Piece7" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 96.0
texture = ExtResource("5_rdjhc")
piece_type = 3

[node name="Slide Puzzle Piece8" parent="Board" instance=ExtResource("2_8cgnj")]
layout_mode = 0
offset_left = 96.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 96.0
texture = ExtResource("5_rdjhc")
piece_type = 3

[node name="Directional Arrows" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
script = ExtResource("6_no8og")

[node name="LeftArrow" type="TextureRect" parent="Directional Arrows"]
layout_mode = 0
offset_left = -32.0
offset_bottom = 32.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(16, 16)
mouse_filter = 0
texture = ExtResource("6_rdjhc")
flip_h = true
script = ExtResource("7_dcd0g")

[node name="RightArrow" type="TextureRect" parent="Directional Arrows"]
layout_mode = 0
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(16, 16)
mouse_filter = 0
texture = ExtResource("6_rdjhc")
script = ExtResource("7_dcd0g")
direction = 1

[node name="UpArrow" type="TextureRect" parent="Directional Arrows"]
layout_mode = 0
offset_top = -32.0
offset_right = 32.0
rotation = 1.5707964
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(16, 16)
mouse_filter = 0
texture = ExtResource("6_rdjhc")
flip_h = true
script = ExtResource("7_dcd0g")
direction = 2

[node name="DownArrow" type="TextureRect" parent="Directional Arrows"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 64.0
rotation = 1.5707964
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(16, 16)
mouse_filter = 0
texture = ExtResource("6_rdjhc")
script = ExtResource("7_dcd0g")
direction = 3

[connection signal="mouse_entered" from="Directional Arrows/LeftArrow" to="Directional Arrows/LeftArrow" method="on_mouse_entered"]
[connection signal="mouse_exited" from="Directional Arrows/LeftArrow" to="Directional Arrows/LeftArrow" method="on_mouse_exited"]
[connection signal="mouse_entered" from="Directional Arrows/RightArrow" to="Directional Arrows/RightArrow" method="on_mouse_entered"]
[connection signal="mouse_exited" from="Directional Arrows/RightArrow" to="Directional Arrows/RightArrow" method="on_mouse_exited"]
[connection signal="mouse_entered" from="Directional Arrows/UpArrow" to="Directional Arrows/UpArrow" method="on_mouse_entered"]
[connection signal="mouse_exited" from="Directional Arrows/UpArrow" to="Directional Arrows/UpArrow" method="on_mouse_exited"]
[connection signal="mouse_entered" from="Directional Arrows/DownArrow" to="Directional Arrows/DownArrow" method="on_mouse_entered"]
[connection signal="mouse_exited" from="Directional Arrows/DownArrow" to="Directional Arrows/DownArrow" method="on_mouse_exited"]
